# SadeEngine

./: & make  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  debug.sh  make  memCheck.sh  run.sh  toolchain-mingw32.cmake  valgrind-out.txt
.cache/clangd/index/: CMakeCCompilerId.c.E3C3C3F3ECBE2F9A.idx  CMakeCXXCompilerId.cpp.17FC87EF8CAE75E0.idx  aabb2d.h.502EDB7C7B0D3533.idx  aabb2d.h.7CA6F6BBD61FF8DE.idx  affine-mat.h.FF8B09DDEA844138.idx  affine-post.h.7F7A4AF1DAE80E41.idx  affine-pre.h.1618F22252857982.idx  affine.c.843C8EC606592805.idx  affine.h.23797035D0D758C7.idx  affine.h.2B9F75E078124E73.idx  affine.h.A520F6CD330FAF48.idx  affine2d.c.F1E81EEE43DCEEBE.idx  affine2d.h.001231D990C5F388.idx  affine2d.h.1DC0ACB8A60CDAD7.idx  arrayDynamics.c.6A01894C5A41CB47.idx  arrayDynamics.c.9C1733E6CC667094.idx  arrayDynamics.c.ABACFF042DEC8136.idx  arrayDynamics.h.202A18F63FBD050B.idx  arrayDynamics.h.A4A0CD5A1E706219.idx  arrayDynamics.h.CF6131429C692ADA.idx  arrayList.c.7556349EE8591B3B.idx  arrayList.c.D756B0159DCC989F.idx  arrayList.h.3AB27004A7B14E4C.idx  arrayList.h.D4B892E83F16AAED.idx  arrayList.h.DF7C26A1126B5821.idx  bezier.c.E18CCD3AEDE1DB03.idx  bezier.h.679AA4AC5B031AA3.idx  bezier.h.A25CED8BA1B62FEC.idx  box.c.CB74227FFEA7C937.idx  box.h.50CACEAA30B187BA.idx  box.h.6E41C8D4104D6D51.idx  call.h.C4CD6C84748FF1A0.idx  cam.c.828EA17F96657ADF.idx  cam.h.45B466D8D3016991.idx  cam.h.968D9296CBB8D720.idx  camera.c.103101E78DF5ABEE.idx  camera.h.27E6B7C71D0FAF01.idx  cglm.h.42329F95AF06E99A.idx  color.h.88362E479E8B1B35.idx  common.h.BE93D259CC712C60.idx  (+205 more)
build.windows/: CMakeCache.txt  Makefile  cmake_install.cmake
build.windows/resources/shaders/: test.vert
build.windows/sade/: Makefile  cmake_install.cmake
cmake/: cimgui.cmake
examples/: hexagon.c
examples/old_not_supported/: accidentalCircle.c  crystal.c  triangulatedHexagon.c
resources/shaders/: 2d.vs  projection.vs  test.fs  texture_projection.fs  texture_projection.vs  texture_projection_2dto3d.vs
src/: CMakeLists.txt  defaultInitializers.h  defines.h  main.c  relativePosition.h  utils.h  vec.h  window.c  window.h
src backup/: CMakeLists.txt  defaultBehaviour.h  main.c  secondOrderSystem.c  secondOrderSystem.h  window.h
src backup/3d/: camera3D.c  camera3D.h  objectSelection.h
src backup/memory/: dynamicList.h
src backup/ui/: button.h
src copy/: CMakeLists.txt  defines.h  main.c  math.h
src copy 2/: CMakeLists.txt  camera.c  camera.h  main.c  node.c  node.h  relativePosition2D.h
src copy/2D/: CMakeLists.txt  TopdownPlayer.c  TopdownPlayer.h
src copy/3D/: CMakeLists.txt  CameraDefaults.c  CameraDefaults.h
src copy/3D/proceduralGeneration/: drawTree.c
src copy/old/: README.txt  coloredLines.c  gameOfLife.c
src copy/utilities/: Ruler.h  Vector2.h
src/2d/: trailLine2d.c
src/camera/: CMakeLists.txt  camera3d.c  camera3d.h
src/editorClasses/: CMakeLists.txt  dragable.c  dragable.h
src/examples/: arraylist.c
src/fileBuffer/: CMakeLists.txt  fileBuffer.c  fileBuffer.h
src/glShapes/: CMakeLists.txt  glShapes.h
src/glShapes/internal/: defines.h  line.h  rect.h
src/glShapes/shapes/: CMakeLists.txt  line.c
src/glShapes/src/: CMakeLists.txt  grid.c  rect.c
src/gui/: CMakeLists.txt
src/io/: CMakeLists.txt  file.c  file.h
src/logicalShapes/: rect.c  rect.h
src/math/: matrix.c  matrix.h  vec.h
src/math/vector/: vec2.c
src/memory/: CMakeLists.txt  arrayDynamics.c  arrayDynamics.h  arrayList.c  arrayList.h  memory.c  memory.h
src/memory/dynamicArray/: CMakeLists.txt  dynamicArray.c  dynamicArray.h
src/relativePosition/: CMakeLists.txt  rp2d.c  rp3d.c
src/render/: CMakeLists.txt  drawable.c  drawable.h  shader.c  shader.h
src/render/camera/: CMakeLists.txt  camera3d.c
src/render/glShapes/include/: glShapes.h
src/render/glShapes/internal/: grid.h  vec.h
src/render/glShapes/src/: CMakeLists.txt  grid.c
src/render/gui/: CMakeLists.txt  gui.c  gui.h
src/resource/: CMakeLists.txt  resourceManager.h
src/resource/modelLoader/: CMakeLists.txt  modelLoader.c  modelLoader.h
src/resource/shader/: CMakeLists.txt  shader.c  shader.h
src/resource/shaderManager/: CMakeLists.txt  shaderManager.c
src/shapes/: CMakeLists.txt  grid.c  grid.h  rect.c  rect.h
src/utils/: dictionary.c  dictionary.h
src/utils/2d/: CMakeLists.txt  trailLine2d.c  trailLine2d.h
src/utils/dictionary/: CMakeLists.txt
src/utils/relativePosition/: rp2d.c  rp3d.c
src/vector/: CMakeLists.txt  vec3.c
src/window/: CMakeLists.txt  inputMap.h  window.c  window.h
tests/SecondOrderSystem?anımatıon/: main.c
tests/animations/: defaultBehaviour.h  main.c  window.c
tests/greenTree/: a.out  main.c  pluginator.c
tests/greenTree/plugins/: plugin.h  plugin_compiler.c  window.c
tests/relativePosition/: a.out  main.c
